fix: docker-compose.yml file fix build command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,22 @@
 version: "3.9"
 
 services:
+  migrate:
+    build: .
+    volumes:
+      - .:/app
+    command: uv run python src/manage.py migrate
+    env_file:
+      - .env
   web:
     build: .
     ports:
       - "8000:8000"
     volumes:
-      - .:/app
-    command: python manage.py migrate && \
-             gunicorn src.core.asgi:application --bind 0.0.0.0:8000
+      - app:/app
+    command: python3 src/manage.py runserver 0.0.0.0:8000 --noreload
     env_file:
       - .env
-
 volumes:
   app:
+
