--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,11 @@ dependencies=[
     "python-dotenv>=0.21.0",
     "gunicorn>=20.1.0",
     "psycopg2-binary>=2.9.6",
+    "django-environ>=0.12.0",
 ]
 requires-python=">=3.13"
+
+[dependency-groups]
+dev = [
+    "django-environ>=0.12.0",
+]
