fix: updgrade docker to use pip instead of uv

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,7 @@ version: "3.9"
 services:
   migrate:
     build: .
-    volumes:
-      - .:/app
-    command: uv run python src/manage.py migrate
+    command: ["python3", "src/manage.py", "migrate"]
     env_file:
       - .env
   web:
@@ -14,7 +12,7 @@ services:
       - "8000:8000"
     volumes:
       - .:/app
-    command: uv run gunicorn src.core.asgi:application --bind 0.0.0.0:8000
+    command: ["python3", "src/manage.py", "runserver", "0.0.0.0:8000"]
     env_file:
       - .env
 volumes:
