--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,9 +43,11 @@ services:
   migrate:
     build: .
     container_name: migrate-server
-    command: ["python3", "manage.py", "migrate"]
+    command: ["python3", "src/manage.py", "migrate"]
     env_file:
       - .env
+    volumes:
+      - .:/app
     depends_on:
       db:
         condition: service_healthy
@@ -56,7 +58,7 @@ services:
       - "8000:8000"
     depends_on:
       db:
-        condition: service_healthhy
+        condition: service_healthy
       migrate: 
         condition: service_completed_successfully
     command: ["gunicorn", "core.wsgi:application", "--reload", "--bind", "0.0.0.0:8000"]
@@ -64,6 +66,8 @@ services:
       - PYTHONUNBUFFERED=1
     env_file:
       - .env
+    volumes:
+      - .:/app
       
   celery_worker:
     build: .
@@ -73,16 +77,20 @@ services:
     command: ["celery", "-A", "core.celery", "worker", "--loglevel=info"]
     env_file:
       - .env
+    volumes:
+      - .:/app
     restart: unless-stopped
 
   celery_beat:
     build: .
-    container_nanme: celery_beat
+    container_name: celery_beat
     depends_on:
       - redis
     command: ["celery", "-A", "core.celery", "beat", "--loglevel=info"]
     env_file:
       - .env
+    volumes:
+      - .:/app
     restart: unless-stopped
 
 
