--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ django-environ==0.12.0
 django-redis==6.0.0
 django-rest-framework==0.1.0
 djangorestframework==3.16.1
+dnspython==2.8.0
+email-validator==2.3.0
 gunicorn==23.0.0
 idna==3.11
 kombu==5.6.2
@@ -46,3 +48,4 @@ urllib3==2.6.3
 vine==5.1.0
 wcwidth==0.3.0
 werkzeug==3.1.5
+
