--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,7 @@ services:
         condition: service_healthy
       migrate: 
         condition: service_completed_successfully
-    command: ["gunicorn", "core.wsgi:application", "--reload", "--bind", "0.0.0.0:8000"]
+    command: ["python3", "src/manage.py", "runserver", "0.0.0.0:8000"]
     environment:
       - PYTHONUNBUFFERED=1
     env_file:
