--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres:16
-    container_name: postgres_db
+    container_name: postgres
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -30,7 +30,7 @@ services:
 
   redis:
     image: redis:latest
-    container_name: redis_server
+    container_name: redis-server
     ports:
       - "6379:6379"
     restart: unless-stopped
