--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 
-DJANGO_SETTINGS_MODULE = test.settings
+DJANGO_SETTINGS_MODULE = tests_config.settings
 python_files = test.py *_test.py test_*.py
 pythonpath = src
 testpaths = src/apps/
